Cycles particles do not motion blur when rendered unless displayed in 3D view as "rendered" #39711

Closed
opened 2014-04-13 23:21:34 +02:00 by Sam Brubaker · 6 comments

Version: 2.70a official (nix 64)

How to reproduce:

  • Open attached file with simple Cycles particle system, bake if necessary, and inspect settings
  • Render a frame with particles in it. Notice that the fast-moving particles are motion blurred as expected.
  • Change display settings of particle system to "point", "circle", or anything but "rendered".
  • Notice that, when rendered again, the particles are not motion blurred.

ParticleMotionBlurBug.blend

This is a bug if ever I saw one. The display draw type of the particle system should have no bearing on the motion blur of the particles when rendered.

Version: 2.70a official (nix 64) How to reproduce: - Open attached file with simple Cycles particle system, bake if necessary, and inspect settings - Render a frame with particles in it. Notice that the fast-moving particles are motion blurred as expected. - Change display settings of particle system to "point", "circle", or anything but "rendered". - Notice that, when rendered again, the particles are not motion blurred. [ParticleMotionBlurBug.blend](https://archive.blender.org/developer/F84784/ParticleMotionBlurBug.blend) This is a bug if ever I saw one. The display draw type of the particle system should have no bearing on the motion blur of the particles when rendered.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscriber: @mont29

Added subscriber: @mont29
Brecht Van Lommel was assigned by Bastien Montagne 2014-04-14 07:32:16 +02:00

This issue was referenced by 27cebb2651

This issue was referenced by 27cebb26517b9c5b336645dfd0de4ace32cc8912

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 27cebb2651.

Closed by commit 27cebb2651.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39711
No description provided.