Fix T39711: cycles particle motion blur affected by viewport draw method.